--- a/.gitignore
+++ b/.gitignore
@@ -193,9 +193,19 @@ _deps
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,c++,clion,cmake
 
 ### Custom ###
-# Ingore MSBuild generated files
+## Ingore MSBuild generated files ##
+# Compile
 *.vcxproj
 *.vcxproj.*
 *.sln
 *.proj
 *.proj.*
+# Build
+Lib/*
+Debug/*
+x64/*
+*.dir/*
+
+## Ignore python virtualenv generated files ##
+Scripts/*
+pyvenv.cfg
