feat boost: link boost.Log by cmake & test it by using trivial log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,47 @@
-project(ct_regex)
 cmake_minimum_required(VERSION 3.23)
+
+project(regex VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 17)
 include(FetchContent)
 
 # Fetch boost
 FetchContent_Declare(
-    boostorg
+    Boost
+
     GIT_REPOSITORY  https://github.com/boostorg/boost.git
     GIT_TAG         master
     GIT_PROGRESS    TRUE
+
+    OVERRIDE_FIND_PACKAGE
+)
+if(WIN32)
+    # We have to set _WIN32_WINNT for b2
+    if(${CMAKE_SYSTEM_VERSION} EQUAL 10) # Windows 10
+        list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0A00)
+    elseif(${CMAKE_SYSTEM_VERSION} EQUAL 6.3) # Windows 8.1
+        list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0603)
+    elseif(${CMAKE_SYSTEM_VERSION} EQUAL 6.2) # Windows 8
+        list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0602)
+    elseif(${CMAKE_SYSTEM_VERSION} EQUAL 6.1) # Windows 7
+        list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0601)
+    elseif(${CMAKE_SYSTEM_VERSION} EQUAL 6.0) # Windows Vista
+        list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0600)
+    else() # Windows XP (5.1)
+        list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0501)
+    endif()
+endif()
+
+find_package(Boost
+    COMPONENTS
+        log
+    REQUIRED
 )
 
-FetchContent_GetProperties(boostorg)
-if (NOT boostorg_POPULATED)
-    FetchContent_Populate(boostorg)
-    set(BOOST_ENABLE_CMAKE ON)
-    add_subdirectory(${boostorg_SOURCE_DIR} ${boostorg_BINARY_DIR})
-endif ()
+message(STATUS "Boost found. version:${Boost_VERSION_STRING}, source path: ${Boost_SOURCE_DIR}")
 
-include_directories(${boostorg_SOURCE_DIR})
-
+include_directories(${Boost_INCLUDE_DIRS})
 add_executable(${PROJECT_NAME}
     main.cpp
 )
+target_link_libraries(${PROJECT_NAME} Boost::log_setup Boost::log)
