--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,10 @@ cmake_minimum_required(VERSION 3.23)
 project(regex VERSION 0.1.0)
 
 set(CMAKE_CXX_STANDARD 17)
-include(FetchContent)
 
-# Fetch boost
-FetchContent_Declare(
-    Boost
+### Boost ###
+## Setup boilerplate ##
 
-    GIT_REPOSITORY  https://github.com/boostorg/boost.git
-    GIT_TAG         master
-    GIT_PROGRESS    TRUE
-
-    OVERRIDE_FIND_PACKAGE
-)
 if(WIN32)
     # We have to set _WIN32_WINNT for b2
     if(${CMAKE_SYSTEM_VERSION} EQUAL 10) # Windows 10
@@ -31,19 +23,10 @@ if(WIN32)
         list(APPEND B2_OPTIONS define=BOOST_USE_WINAPI_VERSION=0x0501)
     endif()
 endif()
-set(Boost_USE_STATIC_LIBS ON)
 
-FetchContent_MakeAvailable(Boost)
-find_package(Boost
-    COMPONENTS
-        log
-    REQUIRED
-)
+add_subdirectory(boost-cmake)
 
-message(STATUS "Boost found. version:${Boost_VERSION_STRING}, source path: ${Boost_SOURCE_DIR}")
-
-include_directories(${Boost_INCLUDE_DIRS})
 add_executable(${PROJECT_NAME}
     main.cpp
 )
-target_link_libraries(${PROJECT_NAME} Boost::log_setup Boost::log)
+target_link_libraries(${PROJECT_NAME} PUBLIC Boost::log)
