--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,10 @@ repos:
   rev: v14.0.6
   hooks:
   - id: clang-format
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.3.0
+  hooks:
+  - id: mixed-line-ending
+    args: [--fix=lf]
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
