feat pre-commit: add check-case-conflict pre-hook

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,5 @@ repos:
     args: [--fix=lf]
   - id: end-of-file-fixer
   - id: trailing-whitespace
+  # Windows is case sensitive for filenames
+  - id: check-case-conflict
